--- a/pickup/src/main/res/layout/activity_picture_folder.xml
+++ b/pickup/src/main/res/layout/activity_picture_folder.xml
@@ -17,7 +17,7 @@
             android:layout_height="50dp"
             android:layout_centerVertical="true"
             android:gravity="center"
-            android:text="选择图片"
+            android:text="Select Picture"
             android:textColor="#555555"
             android:textSize="22sp" />
     </RelativeLayout>
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:text="您的相册还没有照片！"
+        android:text="No Picture!"
         android:textColor="#888888"
         android:textSize="18sp" />
 
