--- a/gallery/src/main/res/layout/activity_browse_image.xml
+++ b/gallery/src/main/res/layout/activity_browse_image.xml
@@ -4,7 +4,7 @@
     android:layout_height="fill_parent"
     android:background="#000000">
 
-    <com.hzj.pickup.browse.GalleryViewPager
+    <com.hzj.gallery.browse.GalleryViewPager
         android:id="@+id/viewer"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
